--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,1 +1,27 @@
+# Simple Azure DevOps Pipeline for Node.js
 
+trigger:
+  branches:
+    exclude:
+      - '*'
+
+pr:
+  branches:
+    include:
+      - main  # Runs pipeline on PRs targeting the 'main' branch
+
+pool:
+  vmImage: 'ubuntu-latest'  # Specifies the agent to run this job
+
+steps:
+- task: NodeTool@0
+  inputs:
+    versionSpec: '16.x'  # Specify Node.js version; change as needed
+
+- checkout: self  # Checks out the code
+
+- script: npm install
+  displayName: 'Install dependencies'
+
+- script: npm run build
+  displayName: 'Build the application'
